# ImageToIcns

./: CMakeLists.txt  README.md  imagetoicns.sln  pngtoicns.sln
include/: crc.h  icns.h  jpg.h  png.h  resize.h  utils.h
pngtoicns/: jpg.cpp  jpg.h  main.cpp  png.h  pngtoicns.vcxproj  pngtoicns.vcxproj.filters
src/: crc.cpp  icns.cpp  main.cpp  png.cpp  resize.cpp  utils.cpp
